[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "patch-dataset-builder"
version = "0.1.0"
description = "Modular preprocessing toolkit for patch-based maritime trajectory forecasting datasets"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "pandas",
  "torch",
]
